<resources>
    <string name="app_name">Mobile Dev Practice Project</string>
    <string name="calendar_planner_button_text">Calendar</string>
    <string name="food_list_button_text">Food</string>
    <string name="motivation_button_text">Motivate Me!</string>
    <string name="home_button_text">Home</string>
    <string name="food_list_heading">Food List</string>
    <string name="welcome_message">Welcome to the Meal Planner App!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: TRANSLATE -->
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>

    <string name="food_name_label">Food</string>
    <string name="food_name_hint">Enter the name of the dish.</string>
    <string name="food_ingredients_label">Ingredients</string>
    <string name="food_ingredients_hint">List the ingredients.</string>
    <string name="food_recipe_label">Recipe</string>
    <string name="food_recipe_hint">List the instructions.</string>
    <string name="food_calories_label">Calories</string>
    <string name="food_type_label">Type</string>
</resources>